# qclaw

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: demo.py
qclaw_cli/: __init__.py  __main__.py  cli.py  demo.py
qclaw_core/: __init__.py  risk_scorer.py  risk_types.py  snapshot.py
qclaw_core/policies/: __init__.py  command_patterns.py
